Overflow fix

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -63,6 +63,7 @@ html {
 	scroll-behavior: smooth;
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden !important;
 
 	@media only screen and (max-width: 62.5em) {
 		// tab-land
@@ -90,7 +91,7 @@ body {
 	font-size: 1.6rem;
 	background-color: $black;
 	color: $white;
-	overflow-x: hidden;
+	overflow-x: hidden !important;
 	overflow: hidden;
 	position: relative;
 	width: 100%;
@@ -103,7 +104,7 @@ body {
 }
 
 body.loaded {
-	overflow: auto;
+	overflow: hidden;
 }
 
 main {
